Bug 136047 - FILEOPEN PPTX: image from master page appears reverted ("white hole")
Summary: FILEOPEN PPTX: image from master page appears reverted ("white hole")
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:7.1.0 target:7.0.2
Keywords: bibisectNotNeeded, regression
Depends on:
Blocks: SoftEdgeFallout
  Show dependency treegraph
 
Reported: 2020-08-23 14:34 UTC by Gerald Pfeifer
Modified: 2020-12-19 10:56 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Sample slides (PPTX) (592.35 KB, application/vnd.ms-powerpoint)
2020-08-23 14:34 UTC, Gerald Pfeifer
Details
Screenshot comparing LO 6.4 (or Office 365) and LO 7.1 (30.53 KB, image/png)
2020-08-23 14:38 UTC, Gerald Pfeifer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gerald Pfeifer 2020-08-23 14:34:58 UTC
Created attachment 164602 [details]
Sample slides (PPTX)

This is from a presentation template I have been using for months, with
various versions of LibreOffice 6.4, 7.0, and 7.1.

Recently with LibreOffice 7.1 one image from the master page started to
appear inverted (and maybe transparency off, too).

Compare the screenshots from 6.4 and 7.1.
Comment 1 Gerald Pfeifer 2020-08-23 14:38:52 UTC
Created attachment 164604 [details]
Screenshot comparing LO 6.4 (or Office 365) and LO 7.1
Comment 2 Gerald Pfeifer 2020-08-23 14:47:27 UTC
Okay in Version: 6.4.4.2
Build ID: 40(Build:2)
CPU threads: 4; OS: Linux 5.8; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US

Regressed in Version: 7.0.2.0.0+
Build ID: 1ed6a0c86a8b3d35425500021fe763ad311f24d4
CPU threads: 4; OS: Linux 5.8; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:libreoffice-7-0, Time: 2020-08-22_13:10:45

...so whatever broke this on head was backported - which is even worse
in terms of being a regression!!

Regressed in Version: 7.1.0.0.alpha0+
Build ID: b6850bbe95418ecfde404be1696548f18d200c9b
CPU threads: 4; OS: Linux 5.8; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2020-08-22_03:29:12
Comment 3 Mike Kaganski 2020-08-23 16:06:56 UTC
I'm almost certain it's https://git.libreoffice.org/core/+/d5a8056981562bfd5d191a7ceb0131cb52d06749.
Comment 4 Mike Kaganski 2020-08-23 17:31:16 UTC
Or rather from https://git.libreoffice.org/core/+/9c621ee8ea41a1c53bfeca49827290826785973e (changes in OutputDevice::DrawTransformBitmapExDirect).
Comment 5 Gerald Pfeifer 2020-08-23 20:49:39 UTC
(In reply to Mike Kaganski from comment #4)
> Or rather from
> https://git.libreoffice.org/core/+/9c621ee8ea41a1c53bfeca49827290826785973e
> (changes in OutputDevice::DrawTransformBitmapExDirect).

I am pretty sure that (alone) isn't it: This has been working fine for
the last months, and I have been updating to current builds of head once
a week, sometimes more often.

I cannot exactly pinpoint it, but believe this was broken about two weeks
ago, give or take a bit - definitely not in May (the date of this commit)
or June, and probably not July even.
Comment 6 Mike Kaganski 2020-08-23 20:51:22 UTC
(In reply to Gerald Pfeifer from comment #5)

Sure; the commit mentioned in comment 3 has manifested the problem introduced in the commit from comment 4.
Comment 7 Mike Kaganski 2020-08-23 21:22:15 UTC
https://gerrit.libreoffice.org/c/core/+/101254
Comment 8 Commit Notification 2020-08-24 02:34:50 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9ff0cd1f6b2200940ac51e580809e2a17c4b9550

tdf#136047: fix OutputDevice::DrawTransformBitmapExDirect for ...

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2020-08-24 08:08:09 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/e61590d3445172da25bdec04ce6b7158af565eb6

tdf#136047: fix OutputDevice::DrawTransformBitmapExDirect for ...

It will be available in 7.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.