tdf#136047: fix OutputDevice::DrawTransformBitmapExDirect for ...

transparent bitmap case
This has been broken in commit 9c621ee8ea41a1c53bfeca49827290826785973e,
where transparent bitmap started to override any transparency of vdev
with transparency of its pixels, and not use alpha when drawing RGB when
mpAlphaVDev was present.

Instead, this restores using alpha in RGB output, and blends alpha to
what is already in mpAlphaVDev.

Change-Id: Id82717def4535336450a7118f8bd29a1660c9520